@@ -1,3 +1,8 @@
+2006-12-10  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-window.c: set the sensitivity of "paste"
+	according to the clipboard contents. Fixes #74051.
+
 2006-12-10  Paolo Maggi  <paolo@gnome.org>
 
 	* gedit/gedit-documents-panel.c (refresh_list) (window_tab_added)
